wp-content/themes/make-community/scss/buddypress.scss
// Theme and buddypress overrides

.directory section.wrapper {
	@media screen and (min-width: 765px) {
		padding-top: 45px;
	}
}

.buddypress .bp-feedback {
	align-items: center !important;
}

// force font sizes to at least 16px
.breadcrumbs,
div.pagination,
.shortcode-events-left,
.buddypress .main-navs.bp-navs ul li, 
.buddypress-wrap .bp-subnavs ul.subnav li a,
.activity-list .activity-item .activity-inner p, 
.activity-meta.action .button span, 
.activity-meta.action .button span, 
.activity-list .activity-item .activity-header .activity-time-since, 
.activity-list .activity-header p, 
.activity-list .activity-header p a, 
.activity-permalink .activity-list .activity-item .activity-header .time-since, 
.activity-list .activity-item .activity-header a, 
.buddypress .activity-comments .acomment-meta,
.buddypress .activity-comments .acomment-content p,
.sidebar-box .em.em-list-widget .em-item .em-item-info .em-item-name a, 
.sidebar-box .em.em-list-widget .em-item .em-item-meta .em-item-meta-line, 
.sidebar .bp-profile-fields .item, 
.buddypress .subnav-filters div select, 
.buddypress .subnav-filters div input[type="search"], 
.buddypress form.bp-dir-search-form button[type="submit"], 
.buddypress button, .buddypress a.button, .buddypress input[type="submit"], 
.buddypress input[type="button"], 
.buddypress input[type="reset"], 
.buddypress ul.button-nav:not(.button-tabs) li a, 
.buddypress .generic-button a, 
.buddypress .comment-reply-link, 
.buddypress a.bp-title-button, 
.buddypress-wrap #members-list li .user-update, 
#buddypress #item-header-content .generic-button a, 
#buddypress #item-header-content .generic-button button.friendship-button, 
#buddypress.buddypress-wrap #item-header-content .generic-button button.friendship-button, 
#buddypress #item-header-content .generic-button a 
.single-headers #item-header-details, 
.single-headers #item-header-details .user-nicename, 
.single-headers #item-header-details .activity, 
.single-headers #item-header-details .profile-balance,
.single-headers #latest-update, 
.single-headers .group-description,
.activity-update-form #whats-new-textarea textarea,
.single-headers #item-header-details, 
.single-headers #item-header-details .user-nicename, 
.single-headers #item-header-details .activity, 
.single-headers #item-header-details .profile-balance,
.activity-list .activity-header .time-since {
	font-size: max(1em, 16px) !important;
}
.buddypress-wrap .bp-feedback p { 
	font-size: 15px;
}
.buddypress .subnav-search {
    width: 180px;
	input[type=search] {
		padding: 5px 0px 5px 12px !important;
	}
}
.buddypress .subnav-filters .component-filters, .buddypress-wrap .item-body .subnav-filters .component-filters {
    width: 165px;
}
.buddypress .main-navs.bp-navs {
	li { padding: 10px !important; }
	li.object-nav-menu-button a.object-nav-menu-button-a {
		height: 16px;
	}
}

// Groups
#groups-dir-list {
	.item-block {
		min-height: 100px;
		.groups-title a {
			@extend .truncated;
			-webkit-line-clamp: 2;
			font-family: "Roboto Bold";
		}
	}
	.item-avatar {
		aspect-ratio: 1 / 1;
		overflow: hidden;
		img {
			width: 100%;
			height: 100%;
			object-fit: cover;
		}
	}
} 
.shortcode-bp-groups-tabs-container h6.group-box-title {
	height: 40px;
}
.single-item.groups {
	.group-description a { text-decoration: underline !important; }
	#events-groups-li { display: none !important; }
	.subnav-filters .invite-button {
		padding: 8px 10px;
		background: $color-blue;
		color: #fff;
		border: 0px;
		border-radius: 2px;
		.dashicons {
			margin-top: 3px;
		}
	}
	@media screen and (max-width: 760px) {
		.single-headers.groups-header {
			#item-header-wrappper {
				position: relative;
				top: 15px; 
				margin-bottom: 24px;
			}
			#cover {
				height: auto;
			}
		}
	}
}
.buddypress .bp-invites-content ul#members-list li {
	width: auto !important;
}

// Let's make all the member directories the same
.makeco.buddypress #item-body #members-list li.item-entry, .makeco.buddypress #friend-list li.item-entry {
	width: 15%;
	margin-right: 2%;
	margin-bottom: 2.8%;
	float: left;
	&:nth-child(6n) {
		margin-right: 0px;
	}
	@media screen and (max-width: 1024px) {
		width: 30%;
		margin-right: 5%;
		margin-bottom: 5%;
		&:nth-child(3n) {
			margin-right: 0%;
		}
	}
	@media screen and (max-width: 760px) {
		width: 46%;
		margin-right: 8%;
		margin-bottom: 8%;
		&:nth-child(3n) {
			margin-right: 8%;
		}
		&:nth-child(2n) {
			margin-right: 0%;
		}
	}
}

// Members Directory
.members-type-navs #members-all {
	display: none;
}
.directory.members {
	#members-group_leader, #members-student {
		display: none;
	}
}
/* ... */

